--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "http-status": "^1.7.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.2",
+    "stripe": "^17.1.0",
     "zod": "^3.23.8"
   }
 }
